Kiểm tra đầu vào API

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,9 @@
 fastapi
-uvicorn
+uvicorn[standard]
+sqlalchemy
+pydantic
+pydantic-settings
 passlib[bcrypt]
-pyjwt
-pytest
+python-dotenv
+python-jose[cryptography]
+bcrypt<4.0
